@@ -1,30 +1,0 @@
-# This is taken directly from the Python Cookbook, 2nd edition,
-# published by O'Reilly and written by David Ascher, Alex Martelli, and
-# Anna Ravenscroft.  Modified somewhat to behave itself with the transport.
-
-import sys, os
-''' Module to fork the current process as a daemon.
-    NOTE: don't do any of this if your daemon gets started by inetd!  inetd
-    does all you need, including redirecting standard file descriptors;
-    the chdir( ) and umask( ) steps are the only ones you may still want.
-'''
-def daemonize (stdin='/dev/null', stdout='/dev/null', stderr='/dev/null'):
-    ''' Fork the current process as a daemon, redirecting standard file
-        descriptors (by default, redirects them to /dev/null).
-    '''
-    # Perform first fork.
-    try:
-        pid = os.fork( )
-        if pid > 0:
-            sys.exit(0) # Exit first parent.
-    except OSError, e:
-        sys.stderr.write("fork failed: (%d) %s\n" % (e.errno, e.strerror))
-        sys.exit(1)
-    # The process is now daemonized, redirect standard file descriptors.
-    for f in sys.stdout, sys.stderr: f.flush( )
-    si = file(stdin, 'r')
-    so = file(stdout, 'a+')
-    se = file(stderr, 'a+', 0)
-    os.dup2(si.fileno( ), sys.stdin.fileno( ))
-    os.dup2(so.fileno( ), sys.stdout.fileno( ))
-    os.dup2(se.fileno( ), sys.stderr.fileno( ))
